--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,15 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://image.freepik.com/fotos-gratis/selecao-de-varios-coqueteis-na-mesa_140725-2909.jpg);">
+  <div class="container">
+    <h1>Check the <strong>greatest</strong> cocktails around!</h1>
+  </div>
+</div>
+
 <div class="container">
-  <h1>Cocktails List:</h1>
   <ul>
     <% @cocktails.each do |cocktail| %>
-      <li><h2><%= link_to cocktail.name, cocktail_path(cocktail)%></h2></li>
+      <li><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://static.vinepair.com/wp-content/uploads/2020/04/<%cocktail.name%>.jpg)">
+  <%= link_to cocktail.name, cocktail_path(cocktail)%>
+</div></li>
     <% end%>
   </ul>
   <%= link_to "Create Cocktail", new_cocktail_path, class: "btn btn-primary" %>
