--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,24 @@
-<div class="container">
-  <h1></i><%= @cocktail.name %></h1>
-    <%= link_to "Back to list", cocktails_path, class: "btn btn-success"%>
+<div class="d-flex justify-content-around align-items-center">
+  <div class="container">
+    <h1></i><%= @cocktail.name %></h1>
+    <ul>
+      <% @cocktail.doses.each do |dose| %>
+        <li><%= dose.ingredient.name%> - <%= dose.description%>
+        <%= link_to dose_path(dose), method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <i class="fas fa-trash text-dark"></i>
+        <% end %>
+      <% end%>
+    </ul>
+  </div>
+  <div class="container">
+    <h2> Add a new dose:</h2>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :description %>
+      <%= f.association :ingredient %>
+      <%= f.submit "Create a dose", class: "btn btn-danger" %>
+    <% end %>
+  </div>
 </div><br>
+<div class="container">
+  <%= link_to "Back to list", cocktails_path, class: "btn btn-success"%>
+</div>
