add button @homepage

--- a/app/views/cocktails/home.html.erb
+++ b/app/views/cocktails/home.html.erb
@@ -1,5 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://image.freepik.com/fotos-gratis/selecao-de-varios-coqueteis-na-mesa_140725-2909.jpg);">
   <div class="container">
     <h1>Check the <strong>greatest</strong> cocktails around!</h1>
+    <%= link_to "Chek Cocktails", cocktails_path, class: "btn btn-success"%>
   </div>
 </div>
