--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,7 @@
   <h1>Create a brand new cocktail!</h1>
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name %>
+    <%= f.input :image, as: :file %>
     <%= f.submit "Add cocktail", class: "btn btn-danger" %>
   <%end%><br><%= link_to "Back to list", cocktails_path, class: "btn btn-success"%>
 </div>
