--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,24 +1,26 @@
-<div class="d-flex justify-content-around align-items-center">
-  <div class="container">
-    <h1></i><%= @cocktail.name %></h1>
-    <ul>
+<div class="cards">
+  <div class="box">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.image.key %>')">
+      <%= @cocktail.name %>
+    </div>
+    <div class="container"><ul>
       <% @cocktail.doses.each do |dose| %>
         <li><%= dose.ingredient.name%> - <%= dose.description%>
         <%= link_to dose_path(dose), method: :delete, data: { confirm: 'Are you sure?' } do %>
           <i class="fas fa-trash text-dark"></i>
         <% end %>
       <% end%>
-    </ul>
+    </div></ul>
   </div>
-  <div class="container">
+  <div class="box vertical">
     <h2> Add a new dose:</h2>
     <%= simple_form_for [@cocktail, @dose] do |f| %>
       <%= f.input :description %>
       <%= f.association :ingredient %>
-      <%= f.submit "Create a dose", class: "btn btn-danger" %>
+      <%= f.submit "Create a dose", class: "btn btn-dark" %>
     <% end %>
   </div>
 </div><br>
-<div class="container">
-  <%= link_to "Back to list", cocktails_path, class: "btn btn-success"%>
+<div class ="d-flex flex-row p-4">
+  <%= link_to "Back to list", cocktails_path, class: "btn btn-dark"%>
 </div>
