--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,14 @@
 <div class="cards">
   <div class="box">
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.image.key %>')">
-      <%= @cocktail.name %>
-    </div>
+    <% if @cocktail.image.attached? %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.image.key %>')">
+        <%= @cocktail.name %>
+      </div>
+    <% else %>
+      <div class="card-category" style="background-color: black">
+        <%= @cocktail.name %>
+      </div>
+    <% end %>
     <div class="container"><ul>
       <% @cocktail.doses.each do |dose| %>
         <li><%= dose.ingredient.name%> - <%= dose.description%>
