--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -20,8 +20,15 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  text-decoration: none;
-  margin: 16;
+  a {
+    color: inherit;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  a:hover {
+    font-size: 32px;
+    transition: 0.3s;
+  }
 }
 
 .box {
